--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 install:
 
   - python3 -m pip install --upgrade pip
-  - python3 -m pip install telebot pymongo aiohttp
+  - python3 -m pip install telebot pymongo aiohttp python-telegram-bot --upgrade
 
 before_script:
 
